// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders an lg size with icon 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignSelf": "stretch",
        "borderRadius": 16,
        "overflow": "visible",
      },
      {
        "shadowColor": "rgba(139,92,246,0.45)",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 20,
      },
      {
        "width": "100%",
      },
      null,
      null,
      undefined,
    ]
  }
>
  <ViewManagerAdapter_ExpoLinearGradient
    colors={
      [
        4287323382,
        4285343961,
      ]
    }
    endPoint={
      [
        0.5,
        1,
      ]
    }
    startPoint={
      [
        0.5,
        0,
      ]
    }
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 16,
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "borderColor": "rgba(139,92,246,0.8)",
          "borderWidth": 1,
          "height": 56,
          "paddingHorizontal": 24,
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "height": 18,
            "justifyContent": "center",
            "width": 18,
          }
        }
      />
      <Text
        numberOfLines={1}
        style={
          [
            {
              "fontFamily": "Inter-SemiBold",
              "fontWeight": "600",
              "letterSpacing": 1.12,
              "textTransform": "uppercase",
            },
            {
              "color": "#ffffff",
              "fontSize": 15,
            },
          ]
        }
      >
        Lock In Code
      </Text>
    </View>
  </ViewManagerAdapter_ExpoLinearGradient>
</View>
`;

exports[`Button renders cyan variant 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignSelf": "stretch",
        "borderRadius": 16,
        "overflow": "visible",
      },
      {
        "shadowColor": "rgba(6,182,212,0.4)",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 20,
      },
      {
        "width": "100%",
      },
      null,
      null,
      undefined,
    ]
  }
>
  <ViewManagerAdapter_ExpoLinearGradient
    colors={
      [
        4278630100,
        4278751666,
      ]
    }
    endPoint={
      [
        0.5,
        1,
      ]
    }
    startPoint={
      [
        0.5,
        0,
      ]
    }
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 16,
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "borderColor": "transparent",
          "borderWidth": 0,
          "height": 50,
          "paddingHorizontal": 22,
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "fontFamily": "Inter-SemiBold",
              "fontWeight": "600",
              "letterSpacing": 1.12,
              "textTransform": "uppercase",
            },
            {
              "color": "#ffffff",
              "fontSize": 14,
            },
          ]
        }
      >
        Tap
      </Text>
    </View>
  </ViewManagerAdapter_ExpoLinearGradient>
</View>
`;

exports[`Button renders outline variant 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignSelf": "stretch",
        "borderRadius": 16,
        "overflow": "visible",
      },
      null,
      {
        "width": "100%",
      },
      null,
      null,
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 16,
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "backgroundColor": "transparent",
          "borderColor": "#2a2c54",
          "borderWidth": 1,
          "height": 50,
          "paddingHorizontal": 22,
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "fontFamily": "Inter-SemiBold",
              "fontWeight": "600",
              "letterSpacing": 1.12,
              "textTransform": "uppercase",
            },
            {
              "color": "#f5f5f7",
              "fontSize": 14,
            },
          ]
        }
      >
        Tap
      </Text>
    </View>
  </View>
</View>
`;

exports[`Button renders primary variant 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignSelf": "stretch",
        "borderRadius": 16,
        "overflow": "visible",
      },
      {
        "shadowColor": "rgba(139,92,246,0.45)",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 20,
      },
      {
        "width": "100%",
      },
      null,
      null,
      undefined,
    ]
  }
>
  <ViewManagerAdapter_ExpoLinearGradient
    colors={
      [
        4287323382,
        4285343961,
      ]
    }
    endPoint={
      [
        0.5,
        1,
      ]
    }
    startPoint={
      [
        0.5,
        0,
      ]
    }
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 16,
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "borderColor": "rgba(139,92,246,0.8)",
          "borderWidth": 1,
          "height": 50,
          "paddingHorizontal": 22,
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "fontFamily": "Inter-SemiBold",
              "fontWeight": "600",
              "letterSpacing": 1.12,
              "textTransform": "uppercase",
            },
            {
              "color": "#ffffff",
              "fontSize": 14,
            },
          ]
        }
      >
        Tap
      </Text>
    </View>
  </ViewManagerAdapter_ExpoLinearGradient>
</View>
`;
